{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 59,
  "lineage": "104d8e09-ded0-3bbd-f7e2-7a1df83e1653",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "primary_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d76382cbfc09f06",
            "arn": "arn:aws:ec2:us-east-1:058264529949:instance/i-0e5423bf57047a964",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e5423bf57047a964",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00b759bee655670d3",
            "private_dns": "ip-10-0-1-246.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.246",
            "public_dns": "ec2-3-83-174-220.compute-1.amazonaws.com",
            "public_ip": "3.83.174.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-085ee15353fbe6ef7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0144b8b5b5ca78f67",
            "tags": {
              "Environment": "Demo",
              "Name": "Primary-VPC-Instance",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Primary-VPC-Instance",
              "Region": "us-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01e01966027e6f41d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.primary_sg",
            "aws_subnet.primary_subnet",
            "aws_vpc.primary_vpc",
            "aws_vpc.secondary_vpc",
            "aws_vpc_peering_connection.primary_to_secondary",
            "aws_vpc_peering_connection_accepter.secondary_accepter",
            "data.aws_ami.primary_ami",
            "data.aws_availability_zones.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "secondary_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04067ca5b3061f2ba",
            "arn": "arn:aws:ec2:us-west-2:058264529949:instance/i-0cb62f1da982d4f8b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb62f1da982d4f8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0367ac8bb18699b17",
            "private_dns": "ip-10-1-1-72.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.72",
            "public_dns": "ec2-16-146-104-120.us-west-2.compute.amazonaws.com",
            "public_ip": "16.146.104.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06d8a83292dc2ef63",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bbbaee54ad96d6b9",
            "tags": {
              "Environment": "Demo",
              "Name": "Secondary-VPC-Instance",
              "Region": "us-west-2"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Secondary-VPC-Instance",
              "Region": "us-west-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-054a180464b8f3360"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.secondary_sg",
            "aws_subnet.secondary_subnet",
            "aws_vpc.primary_vpc",
            "aws_vpc.secondary_vpc",
            "aws_vpc_peering_connection.primary_to_secondary",
            "aws_vpc_peering_connection_accepter.secondary_accepter",
            "data.aws_ami.secondary_ami",
            "data.aws_availability_zones.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "primary_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264529949:internet-gateway/igw-07cfecafc6c685c96",
            "id": "igw-07cfecafc6c685c96",
            "owner_id": "058264529949",
            "tags": {
              "Environment": "Demo",
              "Name": "Primary-IGW"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Primary-IGW"
            },
            "vpc_id": "vpc-09cbe89f08497c06b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "secondary_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264529949:internet-gateway/igw-01d275db4d0e992b0",
            "id": "igw-01d275db4d0e992b0",
            "owner_id": "058264529949",
            "tags": {
              "Environment": "Demo",
              "Name": "Secondary-IGW"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Secondary-IGW"
            },
            "vpc_id": "vpc-0b9690fb03b1eb38a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secondary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "primary_to_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03f4349f668cb45343322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03f4349f668cb4534",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0641ad5be63efe89d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.primary_igw",
            "aws_route_table.primary_rt",
            "aws_vpc.primary_vpc",
            "aws_vpc.secondary_vpc",
            "aws_vpc_peering_connection.primary_to_secondary",
            "aws_vpc_peering_connection_accepter.secondary_accepter"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "secondary_to_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0844941f1e912fe24179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0844941f1e912fe24",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0641ad5be63efe89d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.secondary_igw",
            "aws_route_table.secondary_rt",
            "aws_vpc.primary_vpc",
            "aws_vpc.secondary_vpc",
            "aws_vpc_peering_connection.primary_to_secondary",
            "aws_vpc_peering_connection_accepter.secondary_accepter"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "primary_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264529949:route-table/rtb-03f4349f668cb4534",
            "id": "rtb-03f4349f668cb4534",
            "owner_id": "058264529949",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07cfecafc6c685c96",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Demo",
              "Name": "Primary-Route-Table"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Primary-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cbe89f08497c06b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.primary_igw",
            "aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "secondary_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264529949:route-table/rtb-0844941f1e912fe24",
            "id": "rtb-0844941f1e912fe24",
            "owner_id": "058264529949",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d275db4d0e992b0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Demo",
              "Name": "Secondary-Route-Table"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Secondary-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9690fb03b1eb38a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.secondary_igw",
            "aws_vpc.secondary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "primary_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091fecd2e55897d00",
            "route_table_id": "rtb-03f4349f668cb4534",
            "subnet_id": "subnet-0144b8b5b5ca78f67"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.primary_igw",
            "aws_route_table.primary_rt",
            "aws_subnet.primary_subnet",
            "aws_vpc.primary_vpc",
            "data.aws_availability_zones.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "secondary_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2f8c4118d111a2b",
            "route_table_id": "rtb-0844941f1e912fe24",
            "subnet_id": "subnet-0bbbaee54ad96d6b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.secondary_igw",
            "aws_route_table.secondary_rt",
            "aws_subnet.secondary_subnet",
            "aws_vpc.secondary_vpc",
            "data.aws_availability_zones.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "primary_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264529949:security-group/sg-01e01966027e6f41d",
            "description": "Security group for Primary VPC instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e01966027e6f41d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "All traffic from Secondary VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "ICMP from Secondary VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "primary-vpc-sg",
            "name_prefix": "",
            "owner_id": "058264529949",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Demo",
              "Name": "Primary-VPC-SG"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Primary-VPC-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cbe89f08497c06b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secondary_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264529949:security-group/sg-054a180464b8f3360",
            "description": "Security group for Secondary VPC instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054a180464b8f3360",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All traffic from Primary VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ICMP from Primary VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "secondary-vpc-sg",
            "name_prefix": "",
            "owner_id": "058264529949",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Demo",
              "Name": "Secondary-VPC-SG"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Secondary-VPC-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9690fb03b1eb38a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secondary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264529949:subnet/subnet-0144b8b5b5ca78f67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0144b8b5b5ca78f67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264529949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Demo",
              "Name": "Primary-Subnet-us-east-1"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Primary-Subnet-us-east-1"
            },
            "vpc_id": "vpc-09cbe89f08497c06b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.primary_vpc",
            "data.aws_availability_zones.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264529949:subnet/subnet-0bbbaee54ad96d6b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbbaee54ad96d6b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264529949",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Demo",
              "Name": "Secondary-Subnet-us-west-2"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Secondary-Subnet-us-west-2"
            },
            "vpc_id": "vpc-0b9690fb03b1eb38a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secondary_vpc",
            "data.aws_availability_zones.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264529949:vpc/vpc-09cbe89f08497c06b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0841dae78348682c5",
            "default_route_table_id": "rtb-0b99c227ab408f515",
            "default_security_group_id": "sg-0929866013936ba1e",
            "dhcp_options_id": "dopt-0ebab2ede16004cb0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09cbe89f08497c06b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b99c227ab408f515",
            "owner_id": "058264529949",
            "tags": {
              "Environment": "Demo",
              "Name": "Primary-VPC-us-east-1",
              "Purpose": "VPC-Peering-Demo"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Primary-VPC-us-east-1",
              "Purpose": "VPC-Peering-Demo"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "secondary_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264529949:vpc/vpc-0b9690fb03b1eb38a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-098c1be06f5631ae7",
            "default_route_table_id": "rtb-0770c2071e7b3c8d3",
            "default_security_group_id": "sg-0d0e40730e35b3f0c",
            "dhcp_options_id": "dopt-00755a2eefd9c50bb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b9690fb03b1eb38a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0770c2071e7b3c8d3",
            "owner_id": "058264529949",
            "tags": {
              "Environment": "Demo",
              "Name": "Secondary-VPC-us-west-2",
              "Purpose": "VPC-Peering-Demo"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Secondary-VPC-us-west-2",
              "Purpose": "VPC-Peering-Demo"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "primary_to_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-0641ad5be63efe89d",
            "peer_owner_id": "058264529949",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0b9690fb03b1eb38a",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Environment": "Demo",
              "Name": "Primary-to-Secondary-Peering",
              "Side": "Requester"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Primary-to-Secondary-Peering",
              "Side": "Requester"
            },
            "vpc_id": "vpc-09cbe89f08497c06b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.primary_vpc",
            "aws_vpc.secondary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "secondary_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0641ad5be63efe89d",
            "peer_owner_id": "058264529949",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0b9690fb03b1eb38a",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Environment": "Demo",
              "Name": "Secondary-Peering-Accepter",
              "Side": "Accepter"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Secondary-Peering-Accepter",
              "Side": "Accepter"
            },
            "vpc_id": "vpc-09cbe89f08497c06b",
            "vpc_peering_connection_id": "pcx-0641ad5be63efe89d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.primary_vpc",
            "aws_vpc.secondary_vpc",
            "aws_vpc_peering_connection.primary_to_secondary"
          ]
        }
      ]
    }
  ]
}